--- a/src/Client/Common/ProtonVPN.Client.Common.UI/Styles/Controls/ListViewStyles.xaml
+++ b/src/Client/Common/ProtonVPN.Client.Common.UI/Styles/Controls/ListViewStyles.xaml
@@ -76,6 +76,7 @@ along with ProtonVPN.  If not, see <https://www.gnu.org/licenses/>.
 
     <Style x:Key="GhostListViewItemStyle" BasedOn="{StaticResource DefaultListViewItemStyle}" TargetType="ListViewItem">
         <Setter Property="Padding" Value="0" />
+        <Setter Property="IsTabStop" Value="False" />
     </Style>
 
     <Style x:Key="GhostListViewHeaderItemStyle" TargetType="ListViewHeaderItem">
@@ -84,7 +85,7 @@ along with ProtonVPN.  If not, see <https://www.gnu.org/licenses/>.
         <Setter Property="HorizontalContentAlignment" Value="Stretch" />
         <Setter Property="VerticalContentAlignment" Value="Top" />
         <Setter Property="MinHeight" Value="0" />
-        <Setter Property="UseSystemFocusVisuals" Value="{StaticResource UseSystemFocusVisuals}" />
+        <Setter Property="IsTabStop" Value="False" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="ListViewHeaderItem">
@@ -107,6 +108,7 @@ along with ProtonVPN.  If not, see <https://www.gnu.org/licenses/>.
 
     <Style x:Key="GhostListViewStyle" TargetType="ListView">
         <Setter Property="IsTabStop" Value="False" />
+        <Setter Property="IsItemClickEnabled" Value="False" />
         <Setter Property="TabNavigation" Value="Once" />
         <Setter Property="IsSwipeEnabled" Value="True" />
         <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Disabled" />
