--- a/src/Client/Common/ProtonVPN.Client.Common.UI/Styles/Controls/ServerLoadStyles.xaml
+++ b/src/Client/Common/ProtonVPN.Client.Common.UI/Styles/Controls/ServerLoadStyles.xaml
@@ -31,6 +31,7 @@ along with ProtonVPN.  If not, see <https://www.gnu.org/licenses/>.
     <Style BasedOn="{StaticResource ServerLoadDefaultStyle}" TargetType="custom:ServerLoad" />
 
     <Style x:Key="ServerLoadDefaultStyle" TargetType="custom:ServerLoad">
+        <Setter Property="IsTabStop" Value="False" />
         <Setter Property="Background" Value="{ThemeResource BackgroundStrongColorBrush}" />
         <Setter Property="Foreground" Value="{ThemeResource TextNormColorBrush}" />
         <Setter Property="Template">
