--- a/src/Client/ProtonVPN.Client/UI/Main/Home/HomeComponentView.xaml
+++ b/src/Client/ProtonVPN.Client/UI/Main/Home/HomeComponentView.xaml
@@ -65,6 +65,7 @@ along with ProtonVPN.  If not, see <https://www.gnu.org/licenses/>.
         </Grid.RowDefinitions>
 
         <map:MapComponentView x:Name="MapView"
+                              IsTabStop="False"
                               Grid.RowSpan="5"
                               Grid.ColumnSpan="5"
                               BottomOffset="{x:Bind MapBottomOffset}"
@@ -76,6 +77,7 @@ along with ProtonVPN.  If not, see <https://www.gnu.org/licenses/>.
                                              Grid.RowSpan="4"
                                              Grid.Column="0"
                                              Grid.ColumnSpan="5"
+                                             IsTabStop="False"
                                              Height="{StaticResource ConnectionStatusGradientHeight}"
                                              VerticalAlignment="Top"
                                              IsHitTestVisible="False" />
@@ -152,6 +154,7 @@ along with ProtonVPN.  If not, see <https://www.gnu.org/licenses/>.
                                               Grid.Column="3"
                                               Width="{x:Bind WidgetsBarWidth}"
                                               VerticalAlignment="Top"
+                                              IsHomeDisplayed="{x:Bind IsHomeDisplayed}"
                                               Visibility="{x:Bind IsHomeDisplayed, Converter={StaticResource BooleanToVisibilityConverter}}" />
 
         <VisualStateManager.VisualStateGroups>
