Introduce scroll on Human Verification dialog [VPNWIN-2811]

--- a/src/Client/Common/ProtonVPN.Client.Common.UI/Styles/Controls/ContentDialogStyles.xaml
+++ b/src/Client/Common/ProtonVPN.Client.Common.UI/Styles/Controls/ContentDialogStyles.xaml
@@ -527,7 +527,7 @@ along with ProtonVPN.  If not, see <https://www.gnu.org/licenses/>.
                                                       Padding="0,0,12,0"
                                                       HorizontalScrollBarVisibility="Disabled"
                                                       IsTabStop="False"
-                                                      VerticalScrollBarVisibility="Auto">
+                                                      VerticalScrollBarVisibility="Disabled">
                                             <ContentPresenter x:Name="Content"
                                                               Content="{TemplateBinding Content}"
                                                               ContentTemplate="{TemplateBinding ContentTemplate}"
