--- a/src/Client/ProtonVPN.Client/UI/Overlays/HumanVerification/HumanVerificationOverlayView.xaml
+++ b/src/Client/ProtonVPN.Client/UI/Overlays/HumanVerification/HumanVerificationOverlayView.xaml
@@ -35,7 +35,7 @@ along with ProtonVPN.  If not, see <https://www.gnu.org/licenses/>.
         <WebView2 x:Name="WebView2"
                   Width="370"
                   Height="536"
-                  Margin="0,0,0,-50"
+                  Margin="0,0,0,0"
                   DefaultBackgroundColor="{ThemeResource TextInvertColor}"
                   Source="{x:Bind ViewModel.Url}" />
     </Viewbox>
