--- a/src/Client/ProtonVPN.Client/UI/Main/Settings/Pages/AdvancedSettingsPageView.xaml
+++ b/src/Client/ProtonVPN.Client/UI/Main/Settings/Pages/AdvancedSettingsPageView.xaml
@@ -40,6 +40,9 @@ along with ProtonVPN.  If not, see <https://www.gnu.org/licenses/>.
         <Style x:Key="OpenVpnDriverRadioButtonStyle" BasedOn="{StaticResource RadioButtonStyle}" TargetType="RadioButton">
             <Setter Property="GroupName" Value="OpenVpnDriverSetting" />
         </Style>
+        <Style x:Key="DnsBlockModeRadioButtonStyle" BasedOn="{StaticResource RadioButtonStyle}" TargetType="RadioButton">
+            <Setter Property="GroupName" Value="DnsBlockModeSetting" />
+        </Style>
     </Page.Resources>
 
     <custom:SettingsPageContentControl x:Name="PageContentHost"
@@ -296,6 +299,84 @@ along with ProtonVPN.  If not, see <https://www.gnu.org/licenses/>.
                                   Style="{StaticResource DefaultSettingsCardStyle}">
                 <ToggleSwitch IsOn="{x:Bind ViewModel.IsIpv6LeakProtectionEnabled, Mode=TwoWay}"
                               Style="{StaticResource ToggleSwitchStyle}" />
+            </toolkit:SettingsCard>
+
+            <Grid Visibility="{x:Bind ViewModel.IsPaidUser, Converter={StaticResource BooleanToVisibilityConverter}}">
+
+                <toolkit:SettingsExpander AutomationProperties.AutomationId="DnsBlockModeSettingsCard"
+                                          Header="{x:Bind ViewModel.Localizer.Get('Settings_Connection_Advanced_DnsBlockMode')}"
+                                          IsExpanded="True"
+                                          IsTabStop="False"
+                                          Style="{StaticResource SettingsExpanderStyle}"
+                                          Visibility="{x:Bind ViewModel.AreSettingsOverridden, Converter={StaticResource NotBooleanToVisibilityConverter}}">
+                    <toolkit:SettingsExpander.Description>
+                        <TextBlock TextWrapping="Wrap">
+                            <Run Text="{x:Bind ViewModel.Localizer.Get('Settings_Connection_Advanced_DnsBlockMode_Description')}" />
+                            <Run/>
+                        </TextBlock>
+                    </toolkit:SettingsExpander.Description>
+                    <toolkit:SettingsExpander.Items>
+                        <RadioButton AutomationProperties.AutomationId="NrptDnsBlockModeRadioButton"
+                                     IsChecked="{x:Bind ViewModel.IsNrptDnsBlockMode, Mode=TwoWay}"
+                                     Style="{StaticResource DnsBlockModeRadioButtonStyle}">
+                            <StackPanel>
+                                <StackPanel Orientation="Horizontal"
+                                            Spacing="8">
+                                    <TextBlock Style="{StaticResource BodyTextBlockStyle}"
+                                               Text="{x:Bind ViewModel.Localizer.Get('Settings_Connection_Advanced_DnsBlockMode_Nrpt')}" />
+                                    <custom:TagControl Text="{x:Bind ViewModel.Recommended}" />
+                                </StackPanel>
+                                <TextBlock Foreground="{ThemeResource TextWeakColorBrush}"
+                                           Style="{StaticResource CaptionTextBlockStyle}"
+                                           Text="{x:Bind ViewModel.Localizer.Get('Settings_Connection_Advanced_DnsBlockMode_Nrpt_Description')}"
+                                           TextWrapping="Wrap" />
+                            </StackPanel>
+                        </RadioButton>
+                        <RadioButton AutomationProperties.AutomationId="CalloutDnsBlockModeRadioButton"
+                                     IsChecked="{x:Bind ViewModel.IsCalloutDnsBlockMode, Mode=TwoWay}"
+                                     Style="{StaticResource DnsBlockModeRadioButtonStyle}">
+                            <StackPanel>
+                                <TextBlock Style="{StaticResource BodyTextBlockStyle}"
+                                           Text="{x:Bind ViewModel.Localizer.Get('Settings_Connection_Advanced_DnsBlockMode_Callout')}" />
+                                <TextBlock Foreground="{ThemeResource TextWeakColorBrush}"
+                                           Style="{StaticResource CaptionTextBlockStyle}"
+                                           Text="{x:Bind ViewModel.Localizer.Get('Settings_Connection_Advanced_DnsBlockMode_Callout_Description')}"
+                                           TextWrapping="Wrap" />
+                            </StackPanel>
+                        </RadioButton>
+                        <RadioButton AutomationProperties.AutomationId="DisabledDnsBlockModeRadioButton"
+                                     IsChecked="{x:Bind ViewModel.IsDisabledDnsBlockMode, Mode=TwoWay}"
+                                     Style="{StaticResource DnsBlockModeRadioButtonStyle}"
+                                     Visibility="{x:Bind ViewModel.IsDisabledDnsBlockMode, Converter={StaticResource BooleanToVisibilityConverter}}">
+                            <StackPanel>
+                                <TextBlock Style="{StaticResource BodyTextBlockStyle}"
+                                           Text="{x:Bind ViewModel.Localizer.Get('Settings_Connection_Advanced_DnsBlockMode_Disabled')}" />
+                                <TextBlock Foreground="{ThemeResource TextWeakColorBrush}"
+                                           Style="{StaticResource CaptionTextBlockStyle}"
+                                           Text="{x:Bind ViewModel.Localizer.Get('Settings_Connection_Advanced_DnsBlockMode_Disabled_Description')}"
+                                           TextWrapping="Wrap" />
+                            </StackPanel>
+                        </RadioButton>
+                    </toolkit:SettingsExpander.Items>
+                </toolkit:SettingsExpander>
+
+            </Grid>
+
+            <toolkit:SettingsCard AutomationProperties.AutomationId="DnsBlockModeSettingsCard"
+                                  Command="{x:Bind ViewModel.TriggerDnsBlockModeUpsellProcessCommand, Mode=OneTime}"
+                                  Header="{x:Bind ViewModel.Localizer.Get('Settings_Connection_Advanced_DnsBlockMode')}"
+                                  IsClickEnabled="True"
+                                  IsActionIconVisible="False"
+                                  Style="{StaticResource DefaultSettingsCardStyle}"
+                                  Visibility="{x:Bind ViewModel.IsPaidUser, Converter={StaticResource NotBooleanToVisibilityConverter}}">
+                <toolkit:SettingsCard.Description>
+                    <TextBlock TextWrapping="Wrap">
+                        <Run Text="{x:Bind ViewModel.Localizer.Get('Settings_Connection_Advanced_DnsBlockMode_Description')}" />
+                        <Run/>
+                    </TextBlock>
+                </toolkit:SettingsCard.Description>
+                <Image Height="24"
+                       Source="{ThemeResource VpnPlusIllustrationSource}" />
             </toolkit:SettingsCard>
 
         </StackPanel>
